hisujung.yaml
# msa-rabbitmq Service
apiVersion: v1
kind: Service
metadata:
  name: msa-rabbitmq
  labels:
    app: msa-rabbitmq
spec:
  type: LoadBalancer # 대시보드 접근용
  ports:
  - port: 5672
    name: amqp
  - port: 15672
    name: management
  selector:
    app: msa-rabbitmq
---
### app: msa-rabbitmq
# msa-rabbitmq StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: msa-rabbitmq
spec:
  replicas: 1
  serviceName: msa-rabbitmq
  selector:
    matchLabels:
      app: msa-rabbitmq
  template:
    metadata:
      labels:
        app: msa-rabbitmq
    spec:
      containers:
      - name: msa-rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-data
        livenessProbe:
            httpGet:
              path: /
              port: 15672
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 10
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: msa-rabbitmq-pvc
---
#######################################################
### app: msa-member
# msa-member Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-member
  template:
    metadata:
      labels:
        app: msa-member
    spec:
      containers:
      - name: msa-member
        image: suhyen/msa-member:24.07.04
        ports:
        - containerPort: 8080
---
# msa-member Service
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  selector:
    app: msa-member
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
#######################################################
### app: msa-notice
# msa-notice Deployment: notice-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-notice
  template:
    metadata:
      labels:
        app: msa-notice
    spec:
      containers:
      - name: msa-notice
        image: everyday365/msa-notice:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
# msa-notice Service: notice-service
apiVersion: v1
kind: Service
metadata:
  name: notice-service
spec:
  selector:
    app: msa-notice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
#######################################################
### app: msa-portfolio
# msa-portfolio Deployment: portfolio-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 1
  selector: # 디플로이먼트 제어하의 레플리카셋과 파드를 대응시키기 위해 라벨 사용
    matchLabels:
      app: msa-portfolio
  template: # 파드 템플릿
    metadata:
      labels:
        app: msa-portfolio
    spec:
      containers: # 파드 컨테이너의 사양
      - name: msa-portfolio
        image: julia2039/msa-portfolio:v7
        ports:
          - containerPort: 8080
---
# msa-portfolio Service
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 8080
  selector:
    app: msa-portfolio
---
#######################################################
### app: msa-recommend
# msa-recommend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-recommend
  template:
    metadata:
      labels:
        app: msa-recommend
    spec:
      containers:
      - name: msa-recommend
        image: hyezis/msa-recommend:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
---
# msa-recommend Service
apiVersion: v1
kind: Service
metadata:
  name: recommend-service
spec:
  type: ClusterIP
  selector:
    app: msa-recommend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---
## auth-server##
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          image: everyday365/msa-auth:24.07.04
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name:  auth-service
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
