hisujung-ingress.yaml
### hisujung url ###
# member: http://hisujung/member 
# notice: http://hisujung/notice
# portfolio: http://hisujung/portfolio
# springcloudgateway: http://hisujung/springcloudgateway


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hisujung-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hisujung
    http:
      paths:
      - pathType: Prefix
        path: /member
        backend:
          service:
            name: member-service
            port:
              number: 80
      - pathType: Prefix
        path: /notice
        backend:
          service:
            name: notice-service
            port:
              number: 8080
      - pathType: Prefix
        path: /portfolio
        backend:
          service:
            name: portfolio-service
            port:
              number: 3001
      - pathType: Prefix
        path: /springcloudgateway
        backend:
          service:
            name: spring-cloud-gateway-svc
            port:
              number: 80
